examples/Passing/Binary2/greater_equal.c
int main () {
    return 5 >= 5;
}
