examples/Failing/Variables/lvalue_fail2.c
int main() {
    int al = 5;
    ~al = 5;
    return al;
}
